Set needs paint property update for changes of SVG isolation and blending.

BUG=677241
TEST=css3/blending/svg-isolation-*
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2607003002
Cr-Commit-Position: refs/heads/master@{#440913}

Former-commit-id: f622c97dff9a1df040b5faf60a0948ce9c4df0e1